@@ -25,6 +25,12 @@ Paul Davis
   Jackdmp changes log
 ---------------------------
 
+
+2009-11-09 Stephane Letz  <letz@grame.fr>
+
+	* Correct JackGraphManager::GetBuffer for the "client loop with one connection" case : buffer must be copied.
+
+
 2009-11-07 Stephane Letz  <letz@grame.fr>
 
 	* Fix AcquireRealTime and DropRealTime: now distinguish when called from another thread (AcquireRealTime/DropRealTime) and from the thread itself (AcquireSelfRealTime/DropSelfRealTime).
@@ -33,6 +39,7 @@ Paul Davis
 2009-11-06 Stephane Letz  <letz@grame.fr>
 
 	* Correctly save and restore RT mode state in freewheel mode.
+	* Correct freewheel code on client side.
 
 2009-11-05 Stephane Letz  <letz@grame.fr>
 
